galactocentric coordinates and orbits annotated

--- a/notebooks/plotting_globular_clusters.ipynb
+++ b/notebooks/plotting_globular_clusters.ipynb
@@ -70,7 +70,7 @@
      "data": {
       "text/html": [
        "<i>Table length=150</i>\n",
-       "<table id=\"table140123938011232\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140688918091928\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Name</th><th>OName</th><th>RAdeg</th><th>DEdeg</th><th>Dist</th><th>HRV</th><th>e_HRV</th><th>pmRA</th><th>pmDE</th><th>e_pmRA</th><th>e_pmDE</th><th>corr</th><th>Rscale</th><th>Nstar</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>kpc</th><th>km / s</th><th>km / s</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th></th><th>arcmin</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes11</th><th>bytes10</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "     (346.685,  1.2772e+01,  26. ), (347.111, -1.5611e+01,  26.3)]>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "     (5.33870465e+01, -63.47727261,  26.3)]>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -683,8 +683,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we know how far away an object is, we can also calculate its 3D position in the Milky Way, rather than just show where it is in the sky. Because we are converting observations from our position close to the Sun, we also need to specify where Sun is in the Galaxy (capitalized Galaxy is a shorthand for the Milky Way). In `astropy`, this is done by specifying the galactocentric reference frame. We'll use the frame defined in version `v4.0`, as shown below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,8 +700,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you print the reference frame object, you see you get the sky coordinate of the center of the Galaxy, the position of the Sun relative to the Galactic center and the Galactic midplane, as well as its 3D velocity vector with respect to the center of the Galaxy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +718,7 @@
        "    (266.4051, -28.936175)>, galcen_distance=8.122 kpc, galcen_v_sun=(12.9, 245.6, 7.78) km / s, z_sun=20.8 pc, roll=0.0 deg)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,8 +728,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use the same command as before to transform our coordinates `c` into Cartesian coordinates with the origin at the center of the Milky Way:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,8 +744,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, now if we print the new coordinates, we get their x, y, z position:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +763,7 @@
        "    (-6.26093288, -2.58266679, -3.15982267)>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,8 +773,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's see where the globular clusters are in the Milky Way by plotting their x, y, and z coordinates!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -800,8 +835,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we discussed in our meeting, to find out the past orbits of objects in the Milky Way, we need to know their present-day velocity. Thanks to Gaia, we now have these measurements for more than a billion stars! The relevant columns in the data table are `HRV`, which is heliocentric radial velocity (measured with ground-based spectroscopy), and `pmRA` and `pmDE`, which are the proper motions in the R.A. and Dec directions (measured by Gaia). While radial velocity actually has a unit of velocity (km/s), proper motions are angular velocities in the plane of the sky, and they have units of (mas/yr -- milliarcsecond per year, stars move very slowly, and that's why we couldn't detect these motions before Gaia)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -817,8 +859,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's add these velocity measurements to our coordinate object.."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,8 +876,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".. and transform it again to Galactocentric coordinates:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,8 +892,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now when we print the coordinates of the first globular cluster on our list, we get both its x, y, and z position, as well as its velocity vector (also along the x, y, z axes):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +913,7 @@
        "    (-75.03916737, 165.10756157, 46.03408077)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,8 +923,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To calculate orbits, we'll need a few more packages from `gala`, which is a python package for Galactic dynamics:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,8 +941,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we discussed, objects in the Milky Way move because of gravitational forces. So to calculate their past orbits, we need to know the gravitational field in the Milky Way. This is hard to measure directly, but the fiducial model in `gala` is pretty good at reproducing different observations (documented here: http://gala.adrian.pw/en/latest/api/gala.potential.potential.MilkyWayPotential.html#gala.potential.potential.MilkyWayPotential). Here is how we can define the Hamiltonian object that stores the model of the Milky Way, or in other words, its gravitational potential:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,8 +957,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we call `ham.potential`, we see that the model consists of a disk, bulge, central nucleus, and an extended dark-matter halo:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +974,7 @@
        "<CompositePotential disk,bulge,nucleus,halo>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,8 +984,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here are the model parameters, which we'll need to report in the paper, so others can reproduce our findings. This is mainly because there are still uncertainties associated with these parameters, so we need to say exactly what we used."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +1001,7 @@
        "<ImmutableDict {'disk': OrderedDict([('m', <Quantity 6.8e+10 solMass>), ('a', <Quantity 3. kpc>), ('b', <Quantity 0.28 kpc>)]), 'bulge': OrderedDict([('m', <Quantity 5.e+09 solMass>), ('c', <Quantity 1. kpc>)]), 'nucleus': OrderedDict([('m', <Quantity 1.71e+09 solMass>), ('c', <Quantity 0.07 kpc>)]), 'halo': OrderedDict([('m', <Quantity 5.4e+11 solMass>), ('r_s', <Quantity 15.62 kpc>)])}>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,8 +1011,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now comes a bit of translation. For `gala` to be able to calculate the orbit of an object, its starting position needs to be in this format:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,8 +1027,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice how we just used the Galactocentric coordinates of the first globular cluster stored in `cg`. And now we have everything to calculate the orbit. The Hamiltonian object we created before has a function associated with it that know to use the gravitational potential we specified already. So all we have to do now is pass the initial position `w0`, the size of the time-step (in our case 1 Myr), and the number of time-steps (in our case 500). The orbit is calculated by first finding the gravitational force and calculating how far it moves the object during a single time-step, then finding the gravitational force at the new position and repeating."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,8 +1043,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting object has positions of our object through time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +1060,7 @@
        "<Orbit cartesian, dim=3, shape=(501,)>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,8 +1070,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which we can now plot!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -996,8 +1115,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also has a time series associated with it:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1185,7 @@
        "           500.] Myr>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,8 +1195,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we can now even color points by time, and read off from the plot exactly where the object is at any given time!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
